# loci-plugin

./: .gitattributes  .gitignore  CHANGES.md  CLAUDE.md  INSTALL.md  LICENSE  Readme.md
.claude-plugin/: marketplace.json  plugin.json
asm-analyze-wheels/: loci_service_asmslicer-1.0.0-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  loci_service_asmslicer-1.0.0-cp313-cp313-macosx_26_0_arm64.whl  loci_service_asmslicer-1.0.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.manylinux_2_28_x86_64.whl  loci_service_asmslicer-1.0.1-cp312-cp312-win_amd64.whl  loci_service_asmslicer-1.0.1-cp313-cp313-win_amd64.whl  loci_service_asmslicer-1.0.1-cp314-cp314-win_amd64.whl
hooks/: capture-action.sh  hooks.json  session-lifecycle.sh  stop-analysis.sh
lib/: asm_analyze.py  detect-project.sh  loci_bridge.py
loci-mcp/: hooks.json  manifest.json  setup.sh
loci-mcp/config/: loci.json
loci-mcp/examples/build-configuration/: CMakeLists.txt  README.md  main.cpp
loci-mcp/examples/memory-debugging/: CMakeLists.txt  README.md  memory_leak.cpp
loci-mcp/examples/performance-optimization/: CMakeLists.txt  README.md  entities.cpp
loci-mcp/hooks/: capture-action.sh  session-lifecycle.sh  stop-analysis.sh
loci-plugin/: .mcp.json  setup.sh
loci-plugin/.claude-plugin/: plugin.json
loci-plugin/config/: loci.json
loci-plugin/hooks/: capture-action.sh  hooks.json
loci-plugin/lib/: loci_bridge.py  slicer_cli.py  slicer_mcp_server.py
loci-plugin/scripts/: configure.sh  monitor-hooks.py
loci-plugin/skills/analyze/: SKILL.md
loci-plugin/skills/exec-behavior/: SKILL.md
loci-plugin/skills/profile-blocks/: SKILL.md
loci-plugin/skills/slice/: SKILL.md
loci-plugin/slicer-wheels/: loci_service_asmslicer-1.0.0-py3-none-any.whl
loci-plugin/state/: loci-context.json  loci-metrics.json  loci-warnings.json
loci-plugin/state/analysis-queue/: 2026-02-22T14-56-53Z.json
loci-plugin/state/sessions/: 205b8db0-00ee-4578-af9c-277a6b5f0ead.json  55a2bbe9-707d-4be9-85ae-42f2bd938543-summary.json  55a2bbe9-707d-4be9-85ae-42f2bd938543.json
scripts/: configure.sh  monitor-hooks.py
setup/: setup.sh
skills/analyze/: SKILL.md
skills/control-flow/: SKILL.md
skills/exec-behavior/: SKILL.md
skills/profile-blocks/: SKILL.md
skills/slice/: SKILL.md
slicer-wheels/: loci_service_asmslicer-1.0.0-cp313-cp313-macosx_26_0_arm64.whl
